<resources>
    <string name="app_name">MyHeroTrainer</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="register_email_hint">Email</string>
    <string name="register_confirm_password_hint">Confirm Password</string>
    <string name="register_button_text">Register</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="not_registered_yet_button_text">Not Registered yet?</string>
    <string name="name_label_text">Name:</string>
    <string name="ability_type_label_text">Ability Type:</string>
    <string name="power_level_label_text">Power Level:</string>
    <string name="train_hero_button_text">Train Hero!</string>
    <string name="logout_button_text">Logout</string>
</resources>