<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_username_textedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/login_username_hint"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_email_textedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:hint="@string/register_email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/register_username_textedit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_password_textedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/register_email_textedit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_confirm_password_textedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/register_confirm_password_hint"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/register_password_textedit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/register_button_text"
            app:layout_constraintTop_toBottomOf="@id/register_confirm_password_textedit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#00FFFFFF"
            android:text="@string/cancel_button_text"
            app:layout_constraintTop_toBottomOf="@id/register_register_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>