<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/hero_view_hero_imageview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:minHeight="250dp"
        android:maxHeight="350dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintHeight_min="250dp"
        app:layout_constraintHeight_max="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/hero_view_details_container"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hero_view_details_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/hero_view_hero_imageview"
        app:layout_constraintStart_toStartOf="@id/hero_view_hero_imageview"
        app:layout_constraintEnd_toEndOf="@id/hero_view_hero_imageview"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hero_view_name_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hero_view_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_label_text"
                android:textStyle="bold"
                android:textSize="25sp"
                android:autoSizeMinTextSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hero_view_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="24sp"
                android:autoSizeMinTextSize="19sp"
                android:text="Midoriya Izuku"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/hero_view_name_label"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hero_view_ability_type_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/hero_view_name_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hero_view_ability_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ability_type_label_text"
                android:textStyle="bold"
                android:textSize="25sp"
                android:autoSizeMinTextSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hero_view_ability_type_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="24sp"
                android:autoSizeMinTextSize="19sp"
                android:text="Attacker"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/hero_view_ability_type_label"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hero_view_power_level_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/hero_view_ability_type_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hero_view_power_level_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/power_level_label_text"
                android:textStyle="bold"
                android:textSize="25sp"
                android:autoSizeMinTextSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ProgressBar
                android:id="@+id/hero_view_power_level_progressbar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:indeterminate="false"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:max="100"
                android:progressTint="#FF6D00"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/hero_view_power_level_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hero_view_power_level_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#FFAB00"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/hero_view_power_level_progressbar"
                app:layout_constraintEnd_toEndOf="@id/hero_view_power_level_progressbar"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/hero_view_train_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/train_hero_button_text"
            app:layout_constraintTop_toBottomOf="@id/hero_view_power_level_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>